something/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files\Java\jdk1.7.0_25\bin\javadoc.exe
-author
-version
-nodeprecated
-protected
-noindex
-notree
-nohelp
-nonavbar
-source
1.7
-classpath
C:\Program Files\Greenfoot\lib\extensions\greenfoot.jar;C:\Program Files\Greenfoot\lib\bluejcore.jar;C:\Program Files\Greenfoot\lib\bluejeditor.jar;C:\Program Files\Greenfoot\lib\bluejext.jar;C:\Program Files\Greenfoot\lib\AppleJavaExtensions.jar;C:\Program Files\Greenfoot\lib\junit-4.8.2.jar;C:\Program Files\Greenfoot\lib\bluej.jar;C:\Program Files\Greenfoot\lib\commons-httpclient-3.1.jar;C:\Program Files\Greenfoot\lib\commons-logging-api-1.1.2.jar;C:\Program Files\Greenfoot\lib\commons-codec-1.3.jar;C:\Program Files\Greenfoot\lib\jl1.0.1.jar;C:\Program Files\Greenfoot\lib\opencsv-2.3.jar;C:\java\something
-d
C:\java\something\doc
-encoding
UTF-8
-charset
UTF-8
-docletpath
C:\Program Files\Greenfoot\lib\bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
C:\java\something\Guy.java
<---- end of javadoc command ---->
Loading source file C:\java\something\Guy.java...
C:\java\something\Guy.java:17: error: ';' expected
        MouseInfo myMouse = Greenfoot.getMouseInfo()
                                                    ^
C:\java\something\Guy.java:18: error: <identifier> expected
        setRotation(Greenfoot.)
                              ^
C:\java\something\Guy.java:18: error: ';' expected
        setRotation(Greenfoot.)
                               ^
3 errors
